# tetsuo-pulse

./: .clang-format  .clang-tidy  .clangd  .cursorrules  .gitignore  API_COVERAGE_AUDIT.md  Arena.c  CLAUDE.md  CMakeLists.txt  CODE_REDUNDANCY_ANALYSIS.md  CONTRIBUTING.md  DNS_IMPLEMENTATION_PLAN.md  Doxyfile  Except.c  Except.h  FINAL_TEST_REVIEW.md  GEMINI.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  Socket.c  Socket.h  SocketBuf.c  SocketBuf.h  SocketConfig.h  SocketDgram.c  SocketDgram.h  SocketError.c  SocketHTTPServer.md  SocketPoll.c  SocketPoll.h  SocketPoll_backend.h  SocketPoll_epoll.c  SocketPoll_kqueue.c  SocketPoll_poll.c  SocketPool.c  SocketPool.h  (+31 more)
.claude/: settings.json
.cursor/: worktrees.json
.github/: copilot-instructions.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  benchmark_client  benchmark_raw  benchmark_server  cmake_install.cmake  test_arena  test_except  test_integration  test_socket  test_socketbuf  test_socketdgram  test_socketdns  test_socketerror  test_socketpoll  test_socketpool  test_socketpool_tls  test_threadsafety  test_tls_integration  test_tls_phase4
build-sanitizer/: CMakeCache.txt  CTestTestfile.cmake  Makefile  benchmark_client  benchmark_libevent  benchmark_raw  benchmark_server  cmake_install.cmake  test_arena  test_except  test_happy_eyeballs  test_integration  test_ratelimit  test_reconnect  test_socketbuf  test_socketdgram  test_socketdns  test_socketerror  test_socketpoll  test_socketpool  test_socketpool_tls  test_threadsafety  test_tls_integration  test_tls_phase4
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: SocketGRPCCodegen.cmake
docs/: ASYNC_IO.md  COMPRESSION.md  DNS_IP_LITERAL_VERIFICATION.md  DTLS-CONFIG.md  ERROR_HANDLING.md  GRPC-CODEGEN.md  HTTP-REFACTOR.md  HTTP.md  HTTP2-SERVER.md  HTTP3.md  LOGGING.md  METRICS.md  MIGRATION.md  PROXY.md  QPACK.md  QUIC.md  SECURITY.md  SECURITY_AUDIT_2026-02-15.md  SIGNALS.md  SYN-PROTECT.md  TIMEOUTS.md  TLS-CONFIG.md  WEBSOCKET.md  cross-platform-backends.md  footer.html  grpc-client.md  grpc-http3.md  grpc-overview.md  grpc-server.md  header.html  http_2.md  mainpage.md  simple.md  socket-brand.css  socket-custom.css  socket-theme.css
examples/: CMakeLists.txt  Makefile  async_io.c  buffer_demo.c  connection_pool.c  dns_lookup.c  dtls_client.c  graceful_shutdown.c  happy_eyeballs.c  http2_client.c  http_get.c  http_post.c  http_server.c  ip_tracker.c  metrics_export.c  pool_health.c  proxy_connect.c  rate_limit.c  reconnect_client.c  retry_backoff.c  syn_protect.c  tags  tcp_echo_client.c  tcp_echo_server.c  timer_demo.c  tls_advanced.c  tls_client.c  udp_echo_client.c  udp_echo_server.c  unix_ipc_client.c  unix_ipc_server.c  unix_socket.c  websocket_client.c  websocket_server.c
examples/ai_chat/: agents.c  agents.h  async_worker.c  async_worker.h  grok_client.c  grok_client.h  main.c  websocket_hub.c  websocket_hub.h
examples/ai_chat/static/: index.html
examples/curl/: CMakeLists.txt  README.md
examples/curl/include/curl/: StreamingCurl-private.h
examples/curl/src/: StreamingCurl_url.c
examples/grpc/: README.md  bidi_stream_chat.c  deadline_cancellation.c  tls_mtls_h2.c  unary_hello_world.c
examples/simple/: CMakeLists.txt  curl_clone.c  tetsuo_curl.c
grok_commands/: analyze.md  generate.md  memory.md  security.md  test.md
html/: SocketHPACK-private_8h.html  SocketHPACK-private_8h__incl.map  SocketHPACK-private_8h__incl.md5  SocketHPACK-private_8h_source.html  SocketHPACK_8h.html  SocketHPACK_8h__dep__incl.map  SocketHPACK_8h__dep__incl.md5  SocketHPACK_8h__incl.map  SocketHPACK_8h__incl.md5  SocketHPACK_8h_source.html  SocketHTTP-private_8h.html  SocketHTTP-private_8h__dep__incl.map  SocketHTTP-private_8h__dep__incl.md5  SocketHTTP-private_8h__incl.map  SocketHTTP-private_8h__incl.md5  SocketHTTP-private_8h_source.html  SocketHTTP1-private_8h.html  SocketHTTP1-private_8h__incl.map  SocketHTTP1-private_8h__incl.md5  SocketHTTP1-private_8h_source.html  SocketHTTP1_8h.html  SocketHTTP1_8h__dep__incl.map  SocketHTTP1_8h__dep__incl.md5  SocketHTTP1_8h__incl.map  SocketHTTP1_8h__incl.md5  SocketHTTP1_8h_source.html  SocketHTTP2-private_8h.html  SocketHTTP2-private_8h__incl.map  SocketHTTP2-private_8h__incl.md5  SocketHTTP2-private_8h_source.html  SocketHTTP2_8h.html  SocketHTTP2_8h__dep__incl.map  SocketHTTP2_8h__dep__incl.md5  SocketHTTP2_8h__incl.map  SocketHTTP2_8h__incl.md5  SocketHTTP2_8h_source.html  SocketHTTPClient-config_8h.html  SocketHTTPClient-config_8h__dep__incl.map  SocketHTTPClient-config_8h__dep__incl.md5  SocketHTTPClient-config_8h_source.html  (+222 more)
latex/: SocketHPACK-private_8h.tex  SocketHPACK-private_8h__incl.md5  SocketHPACK-private_8h_source.tex  SocketHPACK_8h.tex  SocketHPACK_8h__dep__incl.md5  SocketHPACK_8h__incl.md5  SocketHPACK_8h_source.tex  SocketHTTP-private_8h.tex  SocketHTTP-private_8h__dep__incl.md5  SocketHTTP-private_8h__incl.md5  SocketHTTP-private_8h_source.tex  SocketHTTP1-private_8h.tex  SocketHTTP1-private_8h__incl.md5  SocketHTTP1-private_8h_source.tex  SocketHTTP1_8h.tex  SocketHTTP1_8h__dep__incl.md5  SocketHTTP1_8h__incl.md5  SocketHTTP1_8h_source.tex  SocketHTTP2-private_8h.tex  SocketHTTP2-private_8h__incl.md5  SocketHTTP2-private_8h_source.tex  SocketHTTP2_8h.tex  SocketHTTP2_8h__dep__incl.md5  SocketHTTP2_8h__incl.md5  SocketHTTP2_8h_source.tex  SocketHTTPClient-config_8h.tex  SocketHTTPClient-config_8h__dep__incl.md5  SocketHTTPClient-config_8h_source.tex  SocketHTTPClient-private_8h.tex  SocketHTTPClient-private_8h__incl.md5  SocketHTTPClient-private_8h_source.tex  SocketHTTPClient_8h.tex  SocketHTTPClient_8h__dep__incl.md5  SocketHTTPClient_8h__incl.md5  SocketHTTPClient_8h_source.tex  SocketHTTPServer-private_8h.tex  SocketHTTPServer-private_8h__incl.md5  SocketHTTPServer-private_8h_source.tex  SocketHTTPServer_8h.tex  SocketHTTPServer_8h__dep__incl.md5  (+78 more)
scripts/: add_license_headers.sh  build_fuzz.sh  coverage_report.sh  generate_corpus.sh  generate_http2_corpus.sh  local_ci.sh  run_fuzz_parallel.sh  (+2 more)
(+3496 files in other folders)
